--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ button {
 
 section {
     background-color: rgb(245, 245, 245);
+    transition: all 300ms ease;
 }
 
 input, textarea {
@@ -57,6 +58,10 @@ input:hover, textarea:hover {
 
 input:focus, textarea:focus {
     border-color: #007BFF;
+}
+
+.modal--open .modal {
+
 }
 
 .container {
@@ -121,6 +126,54 @@ input:focus, textarea:focus {
 .link__hover-effect:hover:after {
     left: 0;
     width: 100%;
+}
+
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 800ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-circle-half-stroke,
+.dark-theme .header__para
+ {
+    color: white;
+}
+
+.dark-theme section{
+    background-color: #242424;
+}
+
+.dark-theme #personal-logo {
+    filter: none;
+}
+
+.dark-theme .scroll__icon {
+    border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+    background-color: white;
+}
+
+.dark-theme .mail__btn {
+    background-color: white;
+    color: #242424;
 }
 
 /* LANDING PAGE */
@@ -262,10 +315,18 @@ nav {
     width: 90%;
     max-width: 1100px;
     height: 700px;
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
     border-radius: 20px;
     overflow: hidden;
     display: flex;
+    visibility: hidden;
+    z-index: -1;
+    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+}
+
+.modal--open .modal {
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+    visibility: visible;
 }
 
 .modal__half {
@@ -276,14 +337,26 @@ nav {
     justify-content: center;
     position: relative;
     transition: all 300ms ease-in;
+    transition: all 300ms ease-in;
+}
+
+.modal--open .modal__about {
+    transform: translateX(0%);
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact
+{
+    transform: translateX(0%);
 }
 
 .modal__about {
     background-color: rgb(245, 245, 245);
-    padding: 40px 72px;
-    display: flex;
+    transform: translateX(-110%);
+    /* padding: 40px 72px; */
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .modal__languages {
@@ -324,6 +397,7 @@ nav {
 .modal__contact {
     background-color: #242424;
     color: white;
+    transform: translateX(110%);
 }
 
 .modal__title {
@@ -371,7 +445,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: -1;
@@ -388,6 +462,11 @@ nav {
     font-weight: 700;
     text-align: center;
     padding: 28px;
+}
+
+.modal__overlay--visible {
+    z-index: 1;
+    display: flex;
 }
 
 .fa-spinner {
